...
        android:layout_marginTop="20dp"
        android:textColor="@color/_64Back"
        android:textSize="28sp"
        tools:text="100"/>

    <android.support.v7.widget.GridLayout
        android:id="@+id/gameGl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:background="@color/gameViewBack"
        android:paddingBottom="5dp"
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/startBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/scoreBack"
            android:text="@string/start"
...
